lesson23/diagnos.yaml
apiVersion: v1
kind: Pod
metadata:
  name: diagnostics
  namespace: dev
spec:
  serviceAccountName: diagnostic-sa
  restartPolicy: Never
  containers:
  - name: kubectl
    image: bitnami/kubectl:latest
    command: ["sh", "-c"]
    args:
      - |
        echo "Pods in dev namespace:";
        kubectl get pods -n dev -l app=wordpress;
        sleep 30;
