lesson23/wordpress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.5.2-apache
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-storage
              mountPath: /var/www/html
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: wp-storage
          persistentVolumeClaim:
            claimName: wp-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: dev
spec:
  selector:
    app: wordpress
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
